PCP - users that can vet comments can add/submit a comment when the period is not open.  Client side logic

--- a/modules/project-comments/client/views/public-comments/main.html
+++ b/modules/project-comments/client/views/public-comments/main.html
@@ -5,14 +5,14 @@
 
 <div class="view-body-container">
 
-    <div class="panel panel-default">   
+    <div class="panel panel-default">
         <div class="pcp-alert clearfix">
             <div class="pull-left">
                 <h2>Public Comment Period is <span ng-if="isBefore">Scheduled</span><span ng-if="isOpen">Now Open</span><span ng-if="isClosed">Now Closed</span>.</h2>
                 <span class="pcp-dates">{{ period.dateStarted | amDateFormat:'MMMM Do, YYYY' }} &nbsp;-&nbsp; {{ period.dateCompleted | amDateFormat:'MMMM Do, YYYY' }}</span>
             </div>
             <div class="pcp-comment-btn-container">
-                <button class="btn submit-comment-btn" ng-if="isOpen && period.userCan.addComment" x-add-public-comment x-project="project" x-period="period">
+                <button class="btn submit-comment-btn" ng-if="allowCommentSubmit" x-add-public-comment x-project="project" x-period="period">
                     Click Here to Submit a Comment
                 </button>
             </div>
@@ -32,7 +32,7 @@
                 <div class="list-group">
                     <a class="list-group-item flex-row" x-artifact-display-modal x-mode="'view'" x-artifact="artifact" x-project="project">
                         <div class="icon">
-                            <span class="glyphicon glyphicon-list-alt"></span> 
+                            <span class="glyphicon glyphicon-list-alt"></span>
                         </div>
                         <div class="title">{{ artifact.name }}</div>
                         <div class="actions">
