--- a/modules/artifacts/client/views/artifact-view.html
+++ b/modules/artifacts/client/views/artifact-view.html
@@ -2,21 +2,13 @@
 <div class="view-title-container flex-row">
 	<h1>{{artifact.name}}</h1>
 	<div class="actions">
+		<a class="btn btn-default btn-sm" ng-if="artifact.userCan.write" ui-sref="p.artifact.edit({artifactId:artifact._id})">Edit</a>
 		<tmpl-permissions-gear class="permission-btn" x-context="project" x-object="artifact"></tmpl-permissions-gear>
 	</div>
 </div>
 
 <div class="view-body-container">
 	<tmpl-artifact-display x-mode="'view'" x-artifact="artifact" x-project="project"></tmpl-artifact-display>
-
 	<div ng-if="authentication.user" ng-include="'modules/artifacts/client/views/partial.artifact-notes.html'"></div>
 	<div ng-if="authentication.user" ng-include="'modules/artifacts/client/views/partial.artifact-comments.html'"></div>
-
-	<div class="form-footer no-border clearfix">
-		<a class="back-btn btn btn-link pull-left" ui-sref="p.detail"><span class="glyphicon glyphicon-chevron-left"></span>Back to Product Details</a>
-		<div class="pull-right">
-			<a class="btn btn-default" ng-if="artifact.userCan.write" ui-sref="p.artifact.edit({artifactId:artifact._id})">Edit</a>
-		</div>
-	</div>
-	
 </div>
