--- a/modules/artifacts/client/views/artifact-approve.html
+++ b/modules/artifacts/client/views/artifact-approve.html
@@ -1,6 +1,11 @@
 
-<div class="view-title-container no-border">
-	<h1>Approve Content &nbsp;&rsaquo;&nbsp; {{artifact.name}} ({{artifact.version}})</h1>
+<div class="view-title-container flex-row">
+	<h1>{{artifact.name}}&nbsp;<span class="placeholder-value">({{artifact.version}})</span></h1>
+	<div class="actions">
+		<a class="btn btn-default btn-sm" title="Cancel" ui-sref="p.detail">Cancel</a>
+		<button class="btn btn-danger btn-sm" title="Reject and return for {{buttons.prev}}" ng-click="reject()">Reject</button>
+		<button class="btn btn-success btn-sm" title="Accept for {{buttons.next}}" ng-click="submit()">Submit for {{buttons.next}}</button>
+	</div>
 </div>
 
 <div class="view-body-container">
