--- a/modules/artifacts/client/views/artifact-publish.html
+++ b/modules/artifacts/client/views/artifact-publish.html
@@ -1,16 +1,14 @@
 
-<div class="view-title-container">
-	<h1>Publish Content &nbsp;&rsaquo;&nbsp; {{artifact.name}}</h1>
+<div class="view-title-container flex-row">
+	<h1>{{artifact.name}}</h1>
+	<div class="actions">
+		<a class="btn btn-default btn-sm" title="Cancel" ui-sref="p.artifact.view({artifactId:artifact._id})">Cancel</a>
+		<a class="btn btn-success btn-sm" title="Publish Content" ng-click="submit()">Publish Content</a>
+	</div>
 </div>
 
 <div class="view-body-container">
 	<tmpl-artifact-display x-mode="'view'" x-artifact="artifact" x-project="project"></tmpl-artifact-display>
-	<div class="form-footer clearfix">
-		<div class="pull-right">
-			<a class="btn btn-default" ui-sref="p.artifact.view({artifactId:artifact._id})">Cancel</a>
-			<a class="btn btn-success" ng-click="submit()">Publish</a>
-		</div>
-	</div>
 
 	<div ng-include="'modules/artifacts/client/views/partial.artifact-notes.html'"></div>
 	<div ng-include="'modules/artifacts/client/views/partial.artifact-comments.html'"></div>
