--- a/modules/projects/client/views/project-partials/project.detail.html
+++ b/modules/projects/client/views/project-partials/project.detail.html
@@ -10,7 +10,7 @@
 		</div>
 	</div>
 
-	<div class="view-body-container">
+	<div class="view-body-container project-details">
 
 		<!-- PUBLIC COMMENT PERIOD NOTIFICATION -->
 		<div class="public-comment-alert hidden">
